fix: Install root dependencies before package dependencies in buildspec
- Add npm ci at root level to install workspace dependencies
- Fixes missing run-p command (from npm-run-all package)

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,6 +11,7 @@ phases:
   pre_build:
     commands:
       - echo "Started installing NPM dependencies on $(date)"
+      - npm ci
       - cd packages/client
       - npm ci
       - cd ../..
