--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,22 +12,12 @@ phases:
     commands:
       - echo "Started installing NPM dependencies on $(date)"
       - npm ci
-      - cd packages/client
-      - npm ci
-      - cd ../..
-      - cd packages/api
-      - npm ci
-      - cd ../..
       - echo "Ended installing NPM dependencies on $(date)"
   build:
     commands:
       - echo "Build started on $(date)"
-      - cd packages/client
-      - npm run build
-      - cd ../..
-      - cd packages/api
-      - npm run build
-      - cd ../..
+      - npm run build --workspace=packages/client
+      - npm run build --workspace=packages/api
       - echo "Build completed on $(date)"
   post_build:
     commands:
