fix: Include root node_modules in deployment artifacts
- Add root node_modules to artifacts for workspace dependencies
- Workspace dependencies are hoisted to root by npm
- Fixes MODULE_NOT_FOUND error for @nestjs/common

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -27,6 +27,7 @@ phases:
 artifacts:
   files:
     - appspec.yml
+    - node_modules/**/*
     - packages/api/node_modules/**/*
     - packages/api/dist/**/*
     - packages/api/package.json
