--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,7 +11,8 @@ phases:
   pre_build:
     commands:
       - echo "Started installing NPM dependencies on $(date)"
-      - npm ci
+      - cd packages/api && npm ci && cd ../..
+      - cd packages/client && npm ci && cd ../..
       - echo "Ended installing NPM dependencies on $(date)"
   build:
     commands:
@@ -19,8 +20,6 @@ phases:
       - npm run build --workspace=packages/client
       - npm run build --workspace=packages/api
       - echo "Build completed on $(date)"
-      - echo "Copying node_modules to package directories for deployment..."
-      - cp -r node_modules packages/api/node_modules_root
       - echo "Build artifacts prepared"
   post_build:
     commands:
@@ -31,7 +30,6 @@ artifacts:
   files:
     - appspec.yml
     - packages/api/node_modules/**/*
-    - packages/api/node_modules_root/**/*
     - packages/api/dist/**/*
     - packages/api/package.json
     - packages/api/package-lock.json
