Fix: Build packages in their own directories
- Run npm run build directly in each package directory
- Avoids workspace command issues
- Each package uses its own node_modules for building

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,8 +17,8 @@ phases:
   build:
     commands:
       - echo "Build started on $(date)"
-      - npm run build --workspace=packages/client
-      - npm run build --workspace=packages/api
+      - cd packages/client && npm run build && cd ../..
+      - cd packages/api && npm run build && cd ../..
       - echo "Build completed on $(date)"
       - echo "Build artifacts prepared"
   post_build:
