--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,14 +11,14 @@ phases:
   pre_build:
     commands:
       - echo "Started installing NPM dependencies on $(date)"
-      - cd packages/api && npm ci && npm rebuild && cd ../..
+      - cd packages/api && npm ci && cd ../..
       - cd packages/client && npm ci && cd ../..
       - echo "Ended installing NPM dependencies on $(date)"
   build:
     commands:
       - echo "Build started on $(date)"
       - cd packages/client && npm run build && cd ../..
-      - cd packages/api && npx --yes @nestjs/cli build && cd ../..
+      - cd packages/api && node node_modules/@nestjs/cli/bin/nest.js build && cd ../..
       - echo "Build completed on $(date)"
       - echo "Build artifacts prepared"
   post_build:
