--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,12 +11,9 @@ phases:
   pre_build:
     commands:
       - echo "Started installing NPM dependencies on $(date)"
-      - cd packages/api && npm ci && cd ../..
+      - cd packages/api && pwd && npm ci && pwd && ls -la node_modules | head -20 && cd ../..
       - cd packages/client && npm ci && cd ../..
       - echo "Ended installing NPM dependencies on $(date)"
-      - echo "Checking if @nestjs/cli was installed..."
-      - ls -la packages/api/node_modules/@nestjs/ | head -20
-      - test -d packages/api/node_modules/@nestjs/cli && echo "@nestjs/cli EXISTS" || echo "@nestjs/cli MISSING"
   build:
     commands:
       - echo "Build started on $(date)"
