--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,9 +11,8 @@ phases:
   pre_build:
     commands:
       - echo "Started installing NPM dependencies on $(date)"
-      - echo "NODE_ENV=$NODE_ENV"
-      - cd packages/api && npm ci && ls -la node_modules | grep -i nestjs && cd ../..
-      - cd packages/client && npm ci && cd ../..
+      - cd packages/api && npm install && cd ../..
+      - cd packages/client && npm install && cd ../..
       - echo "Ended installing NPM dependencies on $(date)"
   build:
     commands:
