--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,6 +16,7 @@ phases:
   build:
     commands:
       - echo "Build started on $(date)"
+      - export VITE_API_URL=/api
       - npm run build --workspace=packages/client
       - npm run build --workspace=packages/api
       - echo "Build completed on $(date)"
