fix: ensure devDependencies are installed in CodeBuild
- Add --include=dev flag to npm ci to install devDependencies
- This ensures npm-run-all2 (run-p) is available for client build

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,7 +11,7 @@ phases:
   pre_build:
     commands:
       - echo "Started installing NPM dependencies on $(date)"
-      - npm ci
+      - npm ci --include=dev
       - echo "Ended installing NPM dependencies on $(date)"
   build:
     commands:
