--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -23,6 +23,7 @@
         "db:init:local": "npm run build:local && NODE_ENV=local node dist/database/index.js -i",
         "db:setup:local": "npm run build:local && NODE_ENV=local node dist/database/index.js -i -m -s",
         "db:migrate:local": "npm run build:local && NODE_ENV=local node dist/database/index.js -m",
+        "migrate:processed-images": "npm run build && NODE_ENV=local node dist/src/processed-images/migrate-cli.js",
         "rename:s3": "npx ts-node -r tsconfig-paths/register scripts/rename-s3-objects.ts"
     },
     "dependencies": {
@@ -79,6 +80,7 @@
         "eslint": "^8.42.0",
         "eslint-config-prettier": "^9.0.0",
         "eslint-plugin-prettier": "^5.0.0",
+        "fast-check": "^4.5.3",
         "jest": "^29.7.0",
         "prettier": "^3.6.2",
         "source-map-support": "^0.5.21",
@@ -97,7 +99,12 @@
         "rootDir": "src",
         "testRegex": ".*\\.spec\\.ts$",
         "transform": {
-            "^.+\\.(t|j)s$": "ts-jest"
+            "^.+\\.(t|j)s$": [
+                "ts-jest",
+                {
+                    "isolatedModules": true
+                }
+            ]
         },
         "collectCoverageFrom": [
             "**/*.(t|j)s"
